--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,4 +13,15 @@
   }
 }
 @layer utilities {
+.pause { animation-play-state: paused;}
+}
+
+
+@keyframes move {
+  0% {
+    transform: translate(0,0);
+  }
+  100% {
+    transform: translate(50px, 50px);
+  }
 }
